[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/spider.png" type="Texture" id=1]
[ext_resource path="res://assets/spider_walk1.png" type="Texture" id=2]
[ext_resource path="res://assets/spider_walk2.png" type="Texture" id=3]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34.75, 18.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 41.25, 13.75 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 4 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -9.53674e-07, -4.76837e-07 )
scale = Vector2( 3.55, 2.25 )
process_parent = true
physics_process_parent = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -22.5 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -4.75 )
shape = SubResource( 3 )
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
